# jsonapi-rust

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
src/: api.rs  errors.rs  lib.rs  model.rs  query.rs
tests/: api_test.rs  derive_test.rs  model_test.rs
