[package]
name = "jsonapi"
version = "0.7.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
description = "JSONAPI implementation"
documentation = "https://docs.rs/jsonapi"
homepage = "https://github.com/michiel/jsonapi-rust"
repository = "https://github.com/michiel/jsonapi-rust.git"
readme = "README.md"
keywords = ["jsonapi"]
categories = []
license = "MIT"
edition = "2024"

[features]
indexmap = ["dep:indexmap"]
derive = ["dep:jsonapi-derive"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
queryst = "3"
log = "0.4"
error-chain = "^0.12.0"
indexmap = { version = "2", features = ["serde"], optional = true }
jsonapi-derive = { path = "derive", optional = true }

[dev-dependencies]
env_logger = "0.9"

[[test]]
name = "derive_test"
required-features = ["derive"]

[badges]
travis-ci = { repository = "michiel/jsonapi-rust", branch = "master" }
